fix next-post button alignment on first post

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -576,6 +576,10 @@ ion-icon#cako-search-clear {
     box-sizing: content-box;
 }
 
+#cako-menu #menu-icon:active {
+    opacity: 0.6;
+}
+
 #cako-menu .menu-icon-outer {
     background: #fff;
     height: 1.7em;
